cmake_minimum_required(VERSION 3.25)
project(C__)

set(CMAKE_CXX_STANDARD 20)

#add_executable(C__ boom.cpp)
#add_executable(C__ DAA.cpp )
#add_executable(C__ OBCH2.cpp OBCH3.cpp)
#add_executable(C__ OBCH3.cpp)
#add_executable(C__ IDZ4.cpp )
#add_executable(C__  cmake-build-debug/IDZ_1.cpp)
#add_executable(C__  Oslonov_12_3.cpp )
#add_executable(C__  Kalculator.cpp )
#add_executable(C__  Dvuzvyaz.cpp )

#add_executable(C__  LAB1.cpp )
#add_executable(C__  Strins.cpp )
#add_executable(C__  Lab2.cpp )
#add_executable(C__ AVL/LAB2INSANE.cpp)
#add_executable(C__ check.cpp  )
#add_executable(C__ img.cpp  )
#add_executable(C__ PICTURE.cpp)
#add_executable(C__ CircleHead.cpp)

#add_executable(C__ Publiiicc.cpp)
#add_executable(C__ heapsortLegacy.cpp)

#add_executable(C__ BankAccount.cpp)
#add_executable(C__ EKO2.0.cpp)
#add_executable(C__ OOP/PashaTexnik.cpp)
#add_executable(C__ OOP/Konteynir.cpp  OOP/Iterator.h  OOP/List.h  OOP/ListNode.h)
#add_executable(C__ OOP/Konteynir.cpp  OOP/Iterator.h  OOP/List.h  OOP/ListNode.h OOP/Dormetery.h)


#add_executable(C__  IDZ_1.2.0.cpp )
#add_executable(C__ AVL/AVLTREE.cpp AVL/Circle.h AVL/Circle.cpp AVL/Trees.h AVL/Trees.cpp AVL/Access.cpp AVL/Access.h)
#add_executable(C__ Sort/SORTDOUBLE.cpp)

#add_executable(C__ FindString/FindStr.cpp)
#add_executable(C__ FindString/FindStrNew.cpp)
#add_executable(C__  MassiveFind/FindMass.cpp)
#add_executable(C__  HashTable/HashClass.cpp)
add_executable(C__  Graph/GraphCode.cpp)

#add_executable(C__ Kursac/main.cpp Kursac/Structures.h Kursac/mainTree.h Kursac/Circle.h Kursac/HashTableBaza.h)


#add_executable(C__ TEST.cpp)

#add_executable(C__ VSS/Matrix.cpp)

#add_executable(C__ OOP/OneMoreTest.cpp)

#add_executable(C__ SUPPORT/StringTo.cpp)